src/assets/styles/cmps/story/_StoryAddComment.scss
.add-comment {
    display: flex;
    align-items: flex-start;

    form {
        width: 100%;
        display: flex;

        textarea {
            width: 100%;
            padding: 0;
            margin: 0;
            font: inherit;
            border-style: none;
            resize: none;
            outline: 0px none transparent;
        }

        Button {
            margin: 0;
            align-self: flex-start;
            background: none;
            color: $blue2;
            border: none;
            font-weight: $font-weight-semibold;
            cursor: pointer;
            z-index: 2;
        }
    }

    svg {
        color: $gray1;
        margin-right: 6px;
        margin-top: 2px;
    }
}

